--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -483,7 +483,7 @@
 /* ===== SIDEBAR LEFT ===== */
 .sidebar-left {
   position: fixed;
-  top: 50px;
+  top: 40px;
   left: 0;
   width: 360px;
   padding: 16px;
@@ -523,6 +523,7 @@
   padding: 16px 0;
   max-width: 680px;
   margin: 0 auto;
+  margin-top: -20px;
 }
 
 /* Create Post Box */
@@ -695,7 +696,7 @@
 /* ===== SIDEBAR RIGHT ===== */
 .sidebar-right {
   position: fixed;
-  top: 50px;
+  top: 40px;
   right: 0;
   width: 360px;
   padding: 16px;
